# lore

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
src/lore/: __init__.py  __main__.py  claude.py  cli.py  db.py  models.py  project.py  search.py  sync.py  ui.py
